ran lint on base.css

--- a/style/base.css
+++ b/style/base.css
@@ -14,19 +14,22 @@ body {
   ---------- header ----------
 */
 .jp-WindowedPanel-inner {
-  margin-top: 0px !important;
+  margin-top: 0 !important;
 }
 
 /* set color for the 2 remaining lines */
 #menu-panel-wrapper > * {
   background-color: var(--nbh-topbar-color);
 }
+
 #jp-MainMenu {
   background-color: var(--nbh-menubar-color);
 }
+
 button.jp-NotebookTrustedStatus {
   background-color: var(--nbh-trusted-color);
 }
+
 .jp-Toolbar.jp-NotebookPanel-toolbar {
   background-color: var(--nbh-topbar-color);
 }
@@ -52,6 +55,7 @@ button.jp-NotebookTrustedStatus {
   flex-direction: column;
   align-items: stretch;
 }
+
 .jp-Notebook-ExecutionIndicator[data-status='idle'] {
   background-color: var(--jp-accent-color0);
 
@@ -59,6 +63,7 @@ button.jp-NotebookTrustedStatus {
     fill: var(--jp-accent-color3);
   }
 }
+
 .jp-Notebook-ExecutionIndicator[data-status='disconnected'],
 .jp-Notebook-ExecutionIndicator[data-status='connecting'] {
   background-color: var(--jp-error-color1);
@@ -69,9 +74,11 @@ button.jp-NotebookTrustedStatus {
 
   /* add a more explicit label when kernel is down */
   width: 250px;
+
   & svg {
-    margin: 0px;
+    margin: 0;
   }
+
   & :first-child {
     display: flex;
     flex-wrap: nowrap;
@@ -81,6 +88,7 @@ button.jp-NotebookTrustedStatus {
       stroke: black;
     }
   }
+
   /* without the > here, things are a little off
      what I mean id to add an after on the first child
      of the element with the data-status attribute above
@@ -93,16 +101,20 @@ button.jp-NotebookTrustedStatus {
     color: var(--jp-error-color3);
   }
 }
+
 .jp-Notebook-ExecutionIndicator[data-status='busy'] {
   background-color: var(--jp-warn-color1);
 
   & path {
     fill: var(--jp-warn-color3);
   }
+
   width: 250px;
+
   & svg {
-    margin: 0px;
+    margin: 0;
   }
+
   & :first-child {
     display: flex;
     flex-wrap: nowrap;
@@ -112,6 +124,7 @@ button.jp-NotebookTrustedStatus {
       stroke: black;
     }
   }
+
   & > :first-child::after {
     content: 'Kernel is busy, please wait !!';
     color: var(--jp-warn-color3);
@@ -127,7 +140,7 @@ button.jp-NotebookTrustedStatus {
 }
 
 .nbh-dialog {
-  --nbh-tocopy-color: rgb(109, 7, 7);
+  --nbh-tocopy-color: rgb(109 7 7);
 
   & .nbh-larger {
     font-size: larger;
@@ -136,10 +149,12 @@ button.jp-NotebookTrustedStatus {
   & #try-share-url {
     margin-left: 40px;
   }
+
   & #share-url {
     color: var(--nbh-tocopy-color);
     font-size: x-small;
   }
+
   & #student-id {
     font-size: x-large;
     font-weight: bold;
